After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754834 - codecparsers: hevc: Fixes in scaling list value and NumPocTocalCurr value calculation
codecparsers: hevc: Fixes in scaling list value and NumPocTocalCurr value ca...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 754010
 
 
Reported: 2015-09-10 13:35 UTC by sreerenj
Modified: 2015-09-10 19:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
codecparsers: h265 : Fix default scaling list values (1.15 KB, patch)
2015-09-10 13:35 UTC, sreerenj
committed Details | Review
codecparsers: h265: Fix the selection of Active Ref Pic Set (1.88 KB, patch)
2015-09-10 16:15 UTC, sreerenj
committed Details | Review

Description sreerenj 2015-09-10 13:35:20 UTC
Created attachment 311073 [details] [review]
codecparsers: h265 : Fix default scaling list values

There seems to be a slight mismatch in default_scaling_list2 while comparing with the Table 7-6..

Attaching the patch.
Comment 1 sreerenj 2015-09-10 16:15:22 UTC
Created attachment 311095 [details] [review]
codecparsers: h265: Fix the selection of Active Ref Pic Set

If short_term_ref_pic_set_sps_flag is FALSE, the ShortTermRefPicSet
structure is supposed to derive from slice header. Which means,
CurrRpsIdx is equal to num_short_term_ref_pic_sets. But the number
of refpicsets communicated via sps header is only num_short_term_ref_pic_sets - 1.And we are using slice_header structure to reference the last entry, which is
ShortTermRefPicSet[num_short_term_ref_pic_sets].
Comment 2 Sebastian Dröge (slomo) 2015-09-10 19:13:19 UTC
commit fcd42b7d776309261d75d1d355c3854e828cf88e
Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com>
Date:   Thu Sep 10 19:02:12 2015 +0300

    codecparsers: h265: Fix the selection of Active Ref Pic Set
    
    If short_term_ref_pic_set_sps_flag is FALSE, the ShortTermRefPicSet
    structure is supposed to derive from slice header. Which means,
    CurrRpsIdx is equal to num_short_term_ref_pic_sets. But the number
    of refpicsets communicated via sps header is only num_short_term_ref_pic_sets - 1.
    And we are using slice_header structure to reference the last entry, which is
    ShortTermRefPicSet[num_short_term_ref_pic_sets].
    
    https://bugzilla.gnome.org/show_bug.cgi?id=754834

commit 81435c88918e0178b8263af7dfc2984b7a8a0bd2
Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com>
Date:   Thu Sep 10 16:28:31 2015 +0300

    codecparsers: h265 : Fix default scaling list values
    
    Fix the default_scaling_list values based on Table 7-6
    
    https://bugzilla.gnome.org/show_bug.cgi?id=754834